# ech0

./: .gitignore  ANDROID_BUILD.md  ANDROID_BUILD_WINDOWS.md  ARCHITECTURE.md  README.md  WSL_ANDROID_SETUP.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
scripts/: build-android.ps1  build-android.sh  build-windows.ps1  build.sh  bump-version.sh
src/: App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: messaging.rs  mod.rs  session.rs
src-tauri/src/core/: crypto.rs  memory.rs  mod.rs  router.rs  transport.rs  ttl.rs
src/components/: ChatWindow.tsx  Header.tsx  MessageInput.tsx  SessionSetup.tsx  Settings.tsx  WipeConfirmDialog.tsx
src/store/: sessionStore.ts
