[package]
name = "ech0"
version = "0.1.0"
description = "ech0 - ephemeral P2P secure messenger"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ech0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1"

# Crypto — pure Rust
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Embedded I2P router
emissary-core = "0.3.1"
emissary-util = { version = "0.3.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["net", "io-util", "time", "sync", "rt-multi-thread", "macros"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

# Android: compile OpenSSL from source (avoids cross-compilation pkg-config issues)
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Patch emissary-util with fix for Rust 1.77+ compatibility (ToUsize trait)
[patch.crates-io]
emissary-util = { path = "../vendor/emissary-util" }

[profile.release]
strip = true
opt-level = 3
